Clean up styles and fix layout issues
Removed unused styles and adjusted layout properties.

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@ body.page-id-520 .wp-block-group .has-border-color {
   padding-bottom:50px!Important;
  border-radius:25px;
 background-color:#fff!important;
-align-items:right!Important;
-flex-basis: 10%!mportant;
 }
 
 body.page-id-520 main .wp-block-group.has-border-color {
@@ -26,15 +24,15 @@ margin-top:-100px;
 }
 }
 
+.tribe-events-widget-events-list__header h2 {
+   font-size:16pt!important;
+  font-weight:bold!important;
+}
+
 body.home .tribe-events-view {
 margin-top:0!important;
 }
 
-.wp-container-core-buttons-is-layout-a89b3969 .wp-block-button a.wp-block-button__link:hover {
-    font-weight:bold;
-    color:#F8C449!important;
-    background-color:#115527!important; 
-}
 
 /* Home Buckets */
 
@@ -69,20 +67,6 @@ height:164px;
 
 .img{
 
-}
-
-/* Protect the Watershed */
-
-.wp-container-core-group-is-layout-6c531013 .wp-block-group-is-layout-flex .wp-block-button {
-display: flex!important;
-  justify-content: flex-end!important;
-}
-
-.wp-container-core-group-is-layout-6c531013 .wp-block-group-is-layout-flex .wp-block-button a:hover {
-background-color:gray!important;
- font-weight:bold;
- color:white!important;
- background-color:#115527!important;
 }
 
 /* about us page */
@@ -500,3 +484,15 @@ font-weight:bold;
 }
 
 /* Racer Information page*/
+
+
+/* Protect the watershed page*/
+
+
+.protect-watershed{
+background:#115427;
+color:white;
+border-radius:20px;
+padding:20px;
+}
+
